update, delete and home functions all working properly

--- a/CaffeineCount/src/main/resources/static/index.html
+++ b/CaffeineCount/src/main/resources/static/index.html
@@ -13,7 +13,7 @@
 		<br><h1>Caffeine Count</h1><br>
 		
 		<div id="drinkDetailDiv">
-			<form id="drinkDetailForm">
+			<form name="drinkDetailForm">
 			</form>
 		</div>
 		
