--- a/CaffeineCount/src/main/resources/static/index.html
+++ b/CaffeineCount/src/main/resources/static/index.html
@@ -22,7 +22,7 @@
 			<form name="newDrinkForm">
 				<div class="form-group" >
 					<label for="name">Drink: </label>
-					<input class="form-control" type="text" name="name" placeholder="Cappuccino">
+					<input class="form-control" type="text" name="name" placeholder="Cappuccino" required>
 				</div>
 				<div class="form-group" >
 					<label for="size">Size: </label>
