added window reload to method calls to display updated data.

--- a/CaffeineCount/src/main/resources/static/index.html
+++ b/CaffeineCount/src/main/resources/static/index.html
@@ -8,9 +8,9 @@
 	<link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-	<main class="container-fluid">
+	<main id="topOfPage" class="container-fluid">
 
-		<br><h1>Caffeine Count</h1><br>
+		<br><h1 id="titleHeader">Caffeine Count</h1><br>
 		
 		<div id="drinkDetailDiv">
 			<form name="drinkDetailForm">
